dataset1235/2025-2/2947369575/users/3893556986/executions/1003782500_775838323.log
== SUBMISSION (2025-09-01 22:55:36)
-- CODE: 
n1 = 5 
n2 = 4
n3 = 3
m = (n1 + n2 + n3)/3
print (m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:55:12)
-- CODE: 
n1 = 5 
n2 = 4
n3 = 3
m (n1 + n2 + n3)/3
print (m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m (n1 + n2 + n3)/3
    ^
NameError: name 'm' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m (n1 + n2 + n3)/3
    ^
NameError: name 'm' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
